fixed download icon

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href="#">
             COMPONENTS
           </a>
-          <a href="#"><img class="dl" src="images/DOWNLOAD-icon.png" alt="dlicon">
+          <a href="#"><img class="dl" src="images/download-icon.png" alt="dlicon">
             DOWNLOAD
           </a>
             <a href="#"><svg class="red"  width="19" height="15" viewBox="0 0 19 15" fill="none" xmlns="http://www.w3.org/2000/svg">
